cloudformation/ecs.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template to create ECS cluster and services for frontend and backend applications.'

Parameters:
  VPCId:
    Description: 'VPC ID'
    Type: String

  PublicSubnetId:
    Description: 'Public Subnet ID'
    Type: String

  PrivateSubnetId:
    Description: 'Private Subnet ID'
    Type: String

Resources:
  ECSCluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      ClusterName: 'MyECSCluster'

  FrontendTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: 'frontend-task'
      ContainerDefinitions:
        - Name: 'frontend-container'
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/frontend-app-repo:latest'
          Memory: 512
          Cpu: 256
          Essential: true
          PortMappings:
            - ContainerPort: 80

  BackendTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: 'backend-task'
      ContainerDefinitions:
        - Name: 'backend-container'
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/backend-app-repo:latest'
          Memory: 512
          Cpu: 256
          Essential: true
          PortMappings:
            - ContainerPort: 8080

  FrontendService:
    Type: 'AWS::ECS::Service'
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: 2
      TaskDefinition: !Ref FrontendTaskDefinition
      LaunchType: 'FARGATE'
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: 'ENABLED'
          Subnets:
            - !Ref PublicSubnetId
          SecurityGroups:
            - !Ref FrontendSecurityGroup

  BackendService:
    Type: 'AWS::ECS::Service'
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: 2
      TaskDefinition: !Ref BackendTaskDefinition
      LaunchType: 'FARGATE'
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: 'DISABLED'
          Subnets:
            - !Ref PrivateSubnetId
          SecurityGroups:
            - !Ref BackendSecurityGroup

  FrontendSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow HTTP access to the frontend'
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'

  BackendSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow HTTP access to the backend'
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref FrontendSecurityGroup

Outputs:
  ECSClusterName:
    Description: 'ECS Cluster Name'
    Value: !Ref ECSCluster
